practica 6 hecha